ensure course image disappears on small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,8 +240,8 @@ body {
 /* media queries */
 
 @media only screen and (max-width: 768px) {
-    .masthead {
-      margin-bottom: 20px;
+    .scale {
+      display: none;
     }
   } 
 
